# ScorpiUS

./: .gitignore  .gitmodules  README.md
Hexapod Simulation/Assets/Materials/: Ground Material.mat  Hexapod Body.mat  Hexapod Leg.mat
Hexapod Simulation/Assets/Physics Material/: Leg Material.physicMaterial  Normal Friction.physicMaterial
Hexapod Simulation/Assets/Prefabs/: Hexapod.prefab
Hexapod Simulation/Assets/Scenes/: SampleScene.unity
Hexapod Simulation/Assets/Scenes/SampleScene/: LightingData.asset
Hexapod Simulation/Assets/Script/: ServomotorScript.cs  ValueSubscriber.cs
Hexapod Simulation/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Hexapod Simulation/Assets/_Recovery/: 0.unity
Hexapod Simulation/ProjectSettings/: ProjectSettings.asset
documentation/: electrical_architecture.drawio
documentation/scorpius_documentation/.obsidian/: workspace.json
scorpius_comm/: CMakeLists.txt  package.xml
scorpius_comm/launch/: comm.launch.py
scorpius_comm/src/: comm_node.cpp  comm_node.hpp
scorpius_gui/: CMakeLists.txt  package.xml
scorpius_gui/launch/: gui.launch.py
scorpius_gui/src/: gui.cpp  gui_node.cpp  gui_node.hpp  gui_window.cpp  gui_window.hpp
scorpius_gui/src/debug_widget/: debug_widget.cpp  debug_widget.hpp  debug_widget_manager.cpp  debug_widget_manager.hpp
scorpius_gui/ui/: DebugWidget.ui  main_window.ui
scorpius_joy/: CMakeLists.txt  package.xml
scorpius_joy/launch/: joy.launch.py
scorpius_joy/src/: joy_formator.cpp  joy_formator.hpp  joy_node.cpp  joy_node.hpp
scorpius_main/: CMakeLists.txt  package.xml
scorpius_main/launch/: main.launch.py
scorpius_main/msg/: ServoAngles.msg  Teleop.msg  inputs.msg  servo_angles.msg
scorpius_media/: CMakeLists.txt  package.xml
scorpius_media/launch/: media.launch.py
scorpius_media/src/: media_node.cpp  media_node.hpp
scorpius_micro/: platformio.ini
scorpius_micro/src/: comm.cpp  comm.h  main.cpp
scorpius_sim/: CMakeLists.txt  package.xml
scorpius_sim/Hexapod Simulation/: .gitignore
scorpius_sim/Hexapod Simulation/Assets/Materials/: Ground.mat  Hexapod Leg.mat
scorpius_sim/Hexapod Simulation/Assets/Physics Material/: No Friction.physicMaterial
scorpius_sim/Hexapod Simulation/Assets/Prefabs/: GameManager.prefab  Hexapod.prefab  Main Camera.prefab  Physical Scene.prefab
scorpius_sim/Hexapod Simulation/Assets/Prefabs/Materials/: Hexapod Body 1.mat
scorpius_sim/Hexapod Simulation/Assets/Prefabs/Physics Material/: Ground Material.physicMaterial
scorpius_sim/Hexapod Simulation/Assets/Prefabs/Script/: CameraScript.cs
scorpius_sim/Hexapod Simulation/Assets/Scenes/: SampleScene.unity
scorpius_sim/Hexapod Simulation/Assets/Script/: ArduinoScript.cs  CameraScript.cs  GameManagerScript.cs  ServomotorScript.cs  ValueSubscriber.cs
scorpius_sim/Hexapod Simulation/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
scorpius_sim/Hexapod Simulation/ProjectSettings/: ProjectSettings.asset
scorpius_sim/builds/sim_BurstDebugInformation_DoNotShip/Data/Plugins/x86_64/: lib_burst_generated.txt
scorpius_sim/builds/sim_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  app.info  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets  sharedassets0.assets  sharedassets0.assets.resS
scorpius_sim/builds/sim_Data/Resources/: unity_builtin_extra
scorpius_sim/launch/: sim.launch.py
scorpius_teleop/: CMakeLists.txt  package.xml  setup.cfg  setup.py
scorpius_teleop/launch/: teleop.launch.py
scorpius_teleop/scorpius_teleop/: __init__.py  teleop_node.py
