<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scorpius_joy</name>
  <version>0.0.0</version>
  <description>Handles controller/ROS communication and input</description>
  <maintainer email="anibal.arango@usherbrooke.ca">anibal</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>joy</depend>
  <depend>sensor_msgs</depend>
  <depend>scorpius_main</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
